--- a/hangman/index.html
+++ b/hangman/index.html
@@ -17,9 +17,13 @@
       </div>
 
       <p>
-        <input type="text" onchange="userGuess(this.value)" maxlength="1">
+        <input type="text" onchange="userGuess(this.value)" maxlength="1" id ="text-input">
         <button onclick='checkLetter()'>Guess!</button>
       </p>
+
+      <h1 class="incorrect-letters"></h1>
+
+      </div>
 
 
 
